--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
   </div>
     <section>
       <header>
-        <h5>Projects</h5>
-          <div class="tv-image">
-            <img src="./tv-app.jpeg" height=300 class="center" alt="blue">
+        <!-- <h5>Projects</h5> -->
+          <!-- <div class="tv-image"> -->
+            <!-- <img src="./tv-app.jpeg" height=300 class="center" alt="blue"> -->
           </div>
         <article>
           <p>
-            This is my TV app. I built this for people who want to watch TV from any channel and venue they want in just
-            one place. I built an app for all Apple devices using HTML, CSS, JavaScript and React.
+            <!-- This is my TV app. I built this for people who want to watch TV from any channel and venue they want in just -->
+            <!-- one place. I built an app for all Apple devices using HTML, CSS, JavaScript and React. -->
           </p>
         </article>                
       </header>
