--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
           </div>
         <article>
           <p>
-            <!-- This is my TV app. I built this for people who want to watch TV from any channel and venue they want in just -->
-            <!-- one place. I built an app for all Apple devices using HTML, CSS, JavaScript and React. -->
+            This is my quiz app. I built this for testing people's knowledge of random skateboarding trivia. 
+            I built it app for all devices using HTML, CSS, JavaScript and jQuery.
+            <br>
+            <br>
+            <br>
+            <img src="./quizAppSnapshot.png" height=300 class="center" alt="blue">
           </p>
         </article>                
       </header>
