--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Website by Tom</title>
-  <link href="https.//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"
     type="text/css" />
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -23,6 +23,7 @@
         <h1>Tom Evans</h1>
 
       </header>
+    </div>
   </section>
   <!-- nav section for Intro, About Me and Contact Me. -->
   <hr>
@@ -32,10 +33,12 @@
         <li><a href="#Where Do I Live?">Where Do I Live?</a></li>
         <li><a href="#Who Am I?">Who Am I?</a></li>
         <li><a href="#Contact Form">Contact Form</a></li>
+        <li><a href="#Projects">Projects</a></li>
       </ul>
 
     </nav>
  </section>
+ <hr>
   <main>
     <section>
 
@@ -46,10 +49,7 @@
         <!-- article content, intro explaining who I am and where I'm located.-->
 
         <p>
-          I am a homebody currently living in Salt Lake City, Utah near downtown. I've become very interested in
-          software development. I love education, science, history and seeing how these disciplines can help humanity. I
-          listen to a lot of podcasts, even more than music, mainly about current events, politics, science, tech and
-          people. I like vacations and when I go somewhere else, I mainly enjoy the scenery, architecture, food, culture
+          I am a homebody currently living in Salt Lake City, Utah near downtown. I like vacations and when I go somewhere else, I mainly enjoy the scenery, architecture, food, culture
           and some activities.
         </p>
         <p>
@@ -58,37 +58,42 @@
         <ul>
           <li>Trying samples at breweries.
           <li>Trying cool and interesting restaurants.
-          <li>Looking at interesting stuff while riding bikes.
+          <li>Looking at interesting stuff and places while riding bikes or walking.
         </ul>
 
       </article>
     </section>
+    <hr>
     <!-- About Me. -->
     <section>
       <h5 id="Who Am I?">Who Am I?</h5>
 
       <article>
         <p>
-          I spend most of my time at home practicing and studying code but for breaks, I like
-          playing video games and watching streaming movies and TV. 
-        </p>
-        <p>
-          I have a digital media minor and a bachelor's degree in graphic design from UVU, but I learned I like solving
+          I have a digital media minor and a Bachelor's degree in Graphic Design from Utah Valley University, but I learned I like solving
           problems and I'm very analytical. While I can be artistic, I'm noticing my mind being more interested in how
           things work. Designing is great but developing the life of those designs seems to be much more fulfilling.
         </p>
         <p>
-          Both then and now, my colleagues say I have great work ethic, I'm easy to talk to and work with, I love
-          exchanging direct feedback, I'm a great team player and I have strong leadership skills.
+          I love education, science, history and seeing how these disciplines can help humanity. I
+          listen to a lot of podcasts(even more than music) mainly about current events, politics, science, tech and
+          people. I spend most of my time at home practicing and studying code but for breaks, I like
+          playing video games and watching movies and streaming TV. 
+        </p>
+        
+        <p>
+          Professionally, my colleagues say I have great work ethic, I'm easy to talk to and work with, I love
+          exchanging direct feedback, and I have strong leadership skills.
         </p>
       </article>
     </section>
+    <hr>
     <section>
       <!-- title for contact section.-->
 
 
       <h3 id="Contact Form">Contact Form</h3>
-      <div class="item-double">
+      <div class="form">
         <form action="https://formspree.io/f/xaylbyvb" method="POST">
           <label>
             Your email:
@@ -105,24 +110,25 @@
         </form>
       </div>
          <!-- links to linkedIn, gitHub and email.-->
+         <br>
   <div class="contact-links">
     <a href="https://www.linkedin.com/in/tom-evans-1164a677/" target="_blank">My LinkedIn</a><br>
     <a href="https://github.com/tomskateboarder" target="_blank">My GitHub</a>
   </div>
+  <hr>
     <section>
       <header>
-        <!-- <h5>Projects</h5> -->
-          <!-- <div class="tv-image"> -->
-            <!-- <img src="./tv-app.jpeg" height=300 class="center" alt="blue"> -->
-          </div>
+        <h5 id="Projects">Projects</h5>
         <article>
           <p>
             This is my quiz app. I built this for testing people's knowledge of random skateboarding trivia. 
-            I built it app for all devices using HTML, CSS, JavaScript and jQuery.
+            I built it for all devices using HTML, CSS, JavaScript and jQuery.
             <br>
             <br>
             <br>
-            <img src="./quizAppSnapshot.png" height=300 class="center" alt="blue">
+            <img src="./quizAppSnapshot.png" class="quiz" alt="blue">
+            <br>
+            ...and more will be posted when ready and polished :)
           </p>
         </article>                
       </header>
@@ -136,13 +142,13 @@
 
     <footer>
       <hr>
-      <div class="item">
+      <div class="emailAddress">
         <!-- email. -->
         tom.ward.evans@gmail.com
       </div>
     </footer>
   </main>
-  <script src="script.js"></script>
+  
   </div>
 </body>
 
