better styling and editing

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <br>
             <img src="./quizAppSnapshot.png" class="quiz" alt="blue">
             <br>
-            ...and more will be posted when ready and polished :)
+            ...and more will be posted when ready :)
           </p>
         </article>                
       </header>
