--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
 
         <h2>my name is</h2>
-        <img src="./new-logo.jpg" height=300 class="center" alt="blue">
+        <img src="./new-logo.jpg" height=300 class="logo" alt="blue">
         <h1>Tom Evans</h1>
 
       </header>
@@ -39,6 +39,7 @@
     </nav>
  </section>
  <hr>
+ <br>
   <main>
     <section>
 
@@ -47,7 +48,7 @@
       <!-- article section for Intro.-->
       <article>
         <!-- article content, intro explaining who I am and where I'm located.-->
-
+        <img src="./map.jpg" class="map" alt="blue">
         <p>
           I am a homebody currently living in Salt Lake City, Utah near downtown. I like vacations and when I go somewhere else, I mainly enjoy the scenery, architecture, food, culture
           and some activities.
@@ -64,6 +65,7 @@
       </article>
     </section>
     <hr>
+    <br>
     <!-- About Me. -->
     <section>
       <h5 id="Who Am I?">Who Am I?</h5>
@@ -87,34 +89,7 @@
         </p>
       </article>
     </section>
-    <hr>
-    <section>
-      <!-- title for contact section.-->
-
-
-      <h3 id="Contact Form">Contact Form</h3>
-      <div class="form">
-        <form action="https://formspree.io/f/xaylbyvb" method="POST">
-          <label>
-            Your email:
-            <input type="text" name="_replyto">
-          </label>
-          <label>
-            Your message:
-            <textarea name="message"></textarea>
-          </label>
-
-          <!-- your other form fields go here -->
-
-          <button type="submit">Send</button>
-        </form>
-      </div>
-         <!-- links to linkedIn, gitHub and email.-->
-         <br>
-  <div class="contact-links">
-    <a href="https://www.linkedin.com/in/tom-evans-1164a677/" target="_blank">My LinkedIn</a><br>
-    <a href="https://github.com/tomskateboarder" target="_blank">My GitHub</a>
-  </div>
+    
   <hr>
     <section>
       <header>
@@ -133,7 +108,34 @@
         </article>                
       </header>
     </section>
+    <hr>
+    <br>
+    <section>
+      <!-- title for contact section.-->
 
+
+      <h3 id="Contact Form">Contact Form</h3>
+      <!-- form -->
+      <div class="form">
+        <form action="https://formspree.io/f/xaylbyvb" method="POST">
+          <label>
+            Your email:
+            <input type="text" name="_replyto">
+          </label>
+          <label>
+            Your message:
+            <textarea name="message" placeholder="Goes to my business email and I check that almost hourly"></textarea>
+          </label>        
+          <button type="submit">Send</button>
+        </form>
+      </div>
+         <!-- links to linkedIn, gitHub and email.-->
+         <br>
+  <div class="contact-links">
+    <a href="https://www.linkedin.com/in/tom-evans-1164a677/" target="_blank">LinkedIn</a>
+    and
+    <a href="https://github.com/tomskateboarder" target="_blank">GitHub</a>
+  </div>
  
     <!-- footer.-->
     </section>
@@ -142,10 +144,7 @@
 
     <footer>
       <hr>
-      <div class="emailAddress">
-        <!-- email. -->
-        tom.ward.evans@gmail.com
-      </div>
+     
     </footer>
   </main>
   
