More styling improvements to come.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h5 id="Where Do I Live?">Where Do I Live?</h5>
           
           <!-- article content, intro explaining who I am and where I'm located.-->
-            <img src="./map.jpg" class="map" alt="blue">
+            <img src="./map.jpg" class="map" alt="Salt Lake City in a map of Utah.">
       </td>
     </tr>
     <tr>
